--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@vercel/analytics": "^1.4.1",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
     "groq-sdk": "^0.11.0",
